--- a/app/app.css
+++ b/app/app.css
@@ -1,93 +1,70 @@
 body {
-  padding: 20px;
+    padding: 20px;
 }
 
 h1 {
-  border-bottom: 1px solid gray;
-  margin-top: 0;
+    border-bottom: 1px solid gray;
+    margin-top: 0;
 }
 
-/* View: Song list */
-.songs {
-  list-style: none;
+div.card-group {
+
 }
 
-.songs li {
-  clear: both;
-  height: 115px;
-  padding-top: 15px;
+* {
+    box-sizing: border-box;
 }
 
-.thumb {
-  float: left;
-  height: 100px;
-  margin: -0.5em 1em 1.5em 0;
-  padding-bottom: 1em;
-  width: 100px;
+.card {
+    float: left;
 }
 
-/* View: Song detail */
-.song {
-  background-color: white;
-  display: none;
-  float: left;
-  height: 400px;
-  margin-bottom: 2em;
-  margin-right: 3em;
-  padding: 2em;
-  width: 400px;
+nav {
+    position: fixed !important;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    border-radius: 0px !important;
+    z-index: 999999 !important;
 }
 
-.song:first-child {
-  display: block;
+.border-right {
+    border-right: 1px solid white;
+    padding-right: 16px;
 }
 
-.song-images {
-  background-color: white;
-  float: left;
-  height: 450px;
-  overflow: hidden;
-  position: relative;
-  width: 450px;
+.bootstrap-select.btn-group:not(.input-group-btn), .bootstrap-select.btn-group[class*="span"] {
+    margin: 0 !important;
 }
 
-.song-thumbs {
-  list-style: none;
-  margin: 0;
+.container-fluid.content {
+    padding-top: 5% !important;
+
+.card-link.danger.delete {
+    float: right !important;
 }
 
-.song-thumbs img {
-  height: 100px;
-  padding: 1em;
-  width: 100px;
+.text-muted.ng-binding {
+    float: right !important;
 }
 
-.song-thumbs li {
-  background-color: white;
-  border: 1px solid black;
-  cursor: pointer;
-  display: inline-block;
-  margin: 1em;
+.card {
+    padding: 16px;
+    border-radius: 5px;
+    border: 1px solid;
 }
 
-.specs {
-  clear: both;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.card img {
+    max-width: 100%;
 }
 
-.specs dt {
-  font-weight: bold;
 }
 
-.specs > li {
-  display: inline-block;
-  vertical-align: top;
-  width: 200px;
+.container-fluid.details button {
+    float: right;
+    margin: 16px;
 }
 
-.specs > li > span {
-  font-size: 1.2em;
-  font-weight: bold;
+.container-fluid.details .input-group {
+    margin: 16px;
 }
